--- a/SimpleWeather.UWP/Controls/ProgressAutoSuggestBox.xaml
+++ b/SimpleWeather.UWP/Controls/ProgressAutoSuggestBox.xaml
@@ -209,7 +209,6 @@
                             </VisualStateManager.VisualStateGroups>
                             <Border x:Name="BackgroundElement" Background="{TemplateBinding Background}" Grid.ColumnSpan="4" Margin="{TemplateBinding BorderThickness}" Opacity="{ThemeResource TextControlBackgroundRestOpacity}" Grid.Row="1" Grid.RowSpan="1"/>
                             <Border x:Name="BorderElement" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Grid.ColumnSpan="4" Grid.Row="1" Grid.RowSpan="1"/>
-                            <ContentPresenter x:Name="HeaderContentPresenter" Grid.ColumnSpan="3" ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}" Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}" FontWeight="Normal" Margin="0,0,0,8" Grid.Row="0" TextWrapping="Wrap" Visibility="Collapsed" x:DeferLoadStrategy="Lazy"/>
                             <ScrollViewer x:Name="ContentElement" AutomationProperties.AccessibilityView="Raw" HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}" HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}" IsTabStop="False" IsHorizontalRailEnabled="{TemplateBinding ScrollViewer.IsHorizontalRailEnabled}" IsVerticalRailEnabled="{TemplateBinding ScrollViewer.IsVerticalRailEnabled}" IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}" Margin="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}" Grid.Row="1" VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}" VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}" ZoomMode="Disabled"/>
                             <ContentControl x:Name="PlaceholderTextContentPresenter" Grid.ColumnSpan="3" Content="{TemplateBinding PlaceholderText}" Foreground="{ThemeResource SystemControlPageTextBaseMediumBrush}" IsHitTestVisible="False" IsTabStop="False" Margin="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}" Grid.Row="1"/>
                             <Button x:Name="DeleteButton" BorderThickness="{TemplateBinding BorderThickness}" Grid.Column="1" FontSize="{TemplateBinding FontSize}" IsTabStop="False" Margin="{ThemeResource HelperButtonThemePadding}" MinWidth="34" Grid.Row="1" Style="{StaticResource DeleteButtonStyle}" Visibility="Collapsed" VerticalAlignment="Stretch"/>
@@ -253,6 +252,10 @@
                                         <ListView.ItemContainerStyle>
                                             <Style TargetType="ListViewItem" BasedOn="{StaticResource ListViewItemRevealStyle}" />
                                         </ListView.ItemContainerStyle>
+                                        <!-- HAXX Workaround -->
+                                        <ListView.Footer>
+                                            <ContentPresenter x:Name="FooterContentPresenter" Grid.ColumnSpan="3" Content="{TemplateBinding Header}" Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}" FontWeight="Normal" Margin="0,0,0,8" TextWrapping="Wrap" />
+                                        </ListView.Footer>
                                     </ListView>
                                 </Border>
                             </Popup>
@@ -273,6 +276,10 @@
                 <ProgressRing x:Name="LoadingRing" Foreground="{StaticResource SimpleBlue}"
                               Visibility="{x:Bind LoadingRing.IsActive, Mode=OneWay, FallbackValue='Collapsed'}" IsActive="False" />
             </AutoSuggestBox.Tag>
+            <!-- HAXX Workaround: Is actually the footer -->
+            <AutoSuggestBox.Header>
+                <TextBlock x:Name="SourceFooter" Text="Footer" FontSize="12" FontWeight="SemiBold" Margin="8,6,8,0" />
+            </AutoSuggestBox.Header>
             <AutoSuggestBox.ItemTemplate>
                 <DataTemplate>
                     <localcontrols:LocationQuery MinWidth="300" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" />
