--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -11,7 +11,9 @@
     d:DesignWidth="400"
     Tag="{x:Bind ViewModel.LocationData, Mode=OneWay}">
 
-    <Border Background="{x:Bind ViewModel.Background, FallbackValue='#FF006FBF', Mode=OneWay}" CornerRadius="2.5" BorderThickness="1">
+    <Border Background="{x:Bind ViewModel.Background, FallbackValue='#FF006FBF', Mode=OneWay}"
+            RequestedTheme="{x:Bind ViewModel.BackgroundTheme, FallbackValue='Light', Mode=OneWay}"
+            CornerRadius="2.5" BorderThickness="1">
         <Grid Height="100" BorderBrush="White" Name="MainGrid">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -21,14 +23,15 @@
             <Viewbox Name="NameBox" Height="55" HorizontalAlignment="Left" Grid.Column="0" StretchDirection="DownOnly" Stretch="Uniform">
                 <toolkitControls:DropShadowPanel BlurRadius="4.0" ShadowOpacity="0.70" VerticalAlignment="Center">
                     <TextBlock x:Name="LocationName" Text="{x:Bind ViewModel.LocationName, FallbackValue='New York, NY', Mode=OneWay}"
-                               Foreground="White" FontSize="24" Padding="10" TextWrapping="WrapWholeWords"/>
+                               Foreground="White" FontSize="24" Padding="10" TextWrapping="WrapWholeWords" MaxLines="2"
+                               TextTrimming="CharacterEllipsis"/>
                 </toolkitControls:DropShadowPanel>
             </Viewbox>
             <Viewbox Height="55" VerticalAlignment="Center" Grid.Column="1">
-                <Grid>
+                <Grid x:Name="TempIconGrid">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="55"/>
+                        <ColumnDefinition Width="70"/>
                     </Grid.ColumnDefinitions>
                     <Viewbox Name="TempBox" Height="55" Width="55" Grid.Column="0">
                         <toolkitControls:DropShadowPanel BlurRadius="4.0" ShadowOpacity="1.0">
